# infostring

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/: de.rs  error.rs  lib.rs  ser.rs
