[package]
name = "infostring"
version = "0.1.2"
edition = "2024"
authors = ["Adam Killam <adammkillam@gmail.com>"]
description = "Serde serializer and deserializer for Quake info strings"
license = "MIT"
repository = "https://github.com/amkillam/infostring"
documentation = "https://docs.rs/infostring"

[features]
default = ["std", "alloc"]
std = ["serde/std"]
alloc = ["serde/alloc"]

[dependencies]
serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
] }
